# receipt-recognizer

./: .gitignore  README.md  README_user.md
backend/: .env.example  Dockerfile  README.md  docker-compose.yml  fly.toml  main.py  pyproject.toml
backend/src/: worker.py
backend/src/api/: __init__.py  cases.py  emission.py  jobs.py  ocr.py  reports.py
backend/src/backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/src/cases/: __init__.py  repository.py
backend/src/core/: __init__.py  config.py
backend/src/jobs/: __init__.py  repository.py
backend/src/models/: __init__.py  case_schema.py  emission_lookup_schema.py  invoice_schema.py  job_schema.py  report_schema.py
backend/src/ocr/: base.py  ocr_engine.py  ocr_schema.py  openrouter_strategy.py
backend/src/services/: __init__.py  calculation.py  carbon_price.py  document_enrichment.py  electricity_emission.py  emission_lookup.py  fx_rate.py  reporting.py
backend/src/storage/: __init__.py  base.py  factory.py  local_storage.py  minio_storage.py
backend/src/utils/: logger.py
docs/customer-notes/: functional-requirements.md
docs/dev-notes/: initial-stacks.md  new-fe-prompt.md  specification.md
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  AuditingScreen.jsx  DocumentImagePreview.jsx  index.css
